--- a/site/partials/_head.ejs
+++ b/site/partials/_head.ejs
@@ -1,7 +1,7 @@
 <head>
-  <title>svgi, a SVG inspector tool</title>
+  <title>svgi, the SVG inspector tool</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="SVGI, a SVG inspector tool. Get all the information you need about an SVG file and export it in JSON, YAML or a readable format">
+  <meta name="description" content="Inspect SVG files from the command line. Get all the information you need about a SVG file and export it in JSON, YAML or a readable format. It's useful for checking the structure and properties of these files without a graphic application">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css"/>
   <link rel="stylesheet" href="./index.css" />
   <link rel="icon" type="image/png" href="./favicon.png">
