--- a/site/index.ejs
+++ b/site/index.ejs
@@ -28,4 +28,5 @@
   <main class="mw8 center ph4 pv3 near-black mb4">
     <%- content %>
   </main>
+  <%- include('partials/_analytics'); %>
 </body>
