Fix wording. Add og metadata

--- a/site/partials/_head.ejs
+++ b/site/partials/_head.ejs
@@ -1,7 +1,10 @@
 <head>
-  <title>svgi, the SVG inspector tool</title>
+  <title>svgi, the SVG inspection tool</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Inspect SVG files from the command line. Get all the information you need about a SVG file and export it in JSON, YAML or a readable format. It's useful for checking the structure and properties of these files without a graphic application">
+  <meta property="og:title" content="svgi, the SVG inspection tool" />
+  <meta property="og:description" content="Inspect SVG files from the command line. Get all the information you need about a SVG file and export it in JSON, YAML or a readable format. It's useful for checking the structure and properties of these files without a graphic application" />
+  <meta property="og:image" content="https://asciinema.org/a/123343.png" />
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css"/>
   <link rel="stylesheet" href="./index.css" />
   <link rel="icon" type="image/png" href="./favicon.png">
