--- a/site/index.ejs
+++ b/site/index.ejs
@@ -4,7 +4,7 @@
   <header class="mw8 center ph3-ns mv5 tc">
     <h1 class="mb3 mt0 f2">SVGI</h1>
     <p>
-      The SVG inspector tool
+      The SVG inspection tool
     </p>
     <pre class="f7 dib mv2 br2"><code>npm install -g svgi</code></pre>
     <p>
